--- a/common.css
+++ b/common.css
@@ -22,6 +22,8 @@
 
 /* html { scroll-behavior: smooth; } */
 /* 쓸 일이 없으려나... */
+/* html { height: 100vh; }
+body { height: 100%; } */
 
 li { list-style: none; }
 a { text-decoration: none; color: #000; }
@@ -40,7 +42,7 @@ html,body {
     position: fixed; top: 0; left: 0;
     z-index: 999;
     width: 100%;
-    height: 100px;
+    height: 90px;
     background: #fff;
     min-width: 1200px;
 }
@@ -65,8 +67,8 @@ html,body {
 #gnb {
     position: absolute; top: 0; left: 30%;
     width: 800px;
-    height: 100px;
-    overflow: hidden;
+    height: 90px;
+    /* overflow: hidden; */
 }
 
 #gnb>ul {
@@ -80,19 +82,28 @@ html,body {
 
 #gnb>ul>li>a {
     display: block;
-    height: 100px; line-height: 100px; text-align: center;
+    height: 90px; line-height: 90px; text-align: center;
     font-size: 20px; font-weight: bold;
+    /* border-bottom: 5px solid #ffd050; box-sizing: border-box; */
+    transition: 0.5s;
     /* border: 1px solid #000; */
     /* background: lightblue; */
+}
+
+#gnb>ul>li:hover>a {
+    color: #ffa600;
 }
 
 /* 서브메뉴 */
 #gnb ul.snb {
     width: 200px;
-    background: #fda788;
+    background: #fff;
+    margin-left: -20px;
+    border-radius: 0 0 20px 20px;
     /* border: 1px solid #000; */
     /* display: block; */
     display: none;
+    padding: 10px 0 20px;
 }
 
 #gnb ul.snb1 {
@@ -100,10 +111,33 @@ html,body {
 }
 
 #gnb ul.snb li {
-    height: 30px; line-height: 30px;
+    height: 40px; line-height: 40px;
     text-align: center;
-
+    transition: 0.5s;
 }
+
+#gnb ul.snb li a {
+    position: relative;
+}
+
+#gnb ul.snb li a::before {
+    content: "";
+    position: absolute; top: 30px; left: 50%;
+    width: 0;
+    border-bottom: 3px solid #ffbd08;
+    /* transition: 0.3s; */
+}
+/* 애니메이션 줄지 말지 고민 */
+
+#gnb ul.snb li:hover>a::before {
+    left: 0;
+    width: 100%;
+}
+
+/* #gnb ul.snb li:hover {
+    background-color: #ffbd08;
+} */
+
 /* 메인_고양문화유산 */
 #content1 {
 }
@@ -117,8 +151,8 @@ html,body {
 /* 슬라이드1 */
 #content1_1 {
     position: relative;
-    margin-top: 100px;
-    height: calc(100vh - 100px);
+    margin-top: 90px;
+    height: calc(100vh - 90px);
     width: 100%;
     /* background: #92b47b; */
 }
@@ -256,7 +290,7 @@ html,body {
     overflow: hidden;
 }
 #bookWrap {
-    width: 950px;
+    width: 1520px;
 }
 #bookWrap li {
     float: left;
@@ -273,7 +307,10 @@ html,body {
 #bookWrap li:nth-child(2) a { background-image: url(./images/e_book2.png);}
 #bookWrap li:nth-child(3) a { background-image: url(./images/e_book3.png);}
 #bookWrap li:nth-child(4) a { background-image: url(./images/e_book4.png);}
-#bookWrap li:last-child a { background-image: url(./images/e_book5.png);}
+#bookWrap li:nth-child(5) a { background-image: url(./images/e_book5.png);}
+#bookWrap li:nth-child(6) a { background-image: url(./images/e_book6.png);}
+#bookWrap li:nth-child(7) a { background-image: url(./images/e_book7.png);}
+#bookWrap li:last-child a { background-image: url(./images/e_book8.png);}
 
 /* 발간자료실(content1_2) 버튼 */
 #cont1_2btn {
@@ -423,12 +460,30 @@ html,body {
 #cont2_btn li a.cont2_next:hover { background-image: url(./images/cont2_next2.png);}
 
 /* 배너 */
-#banner a {
+#banner {
     display: block;
     width: 100%;
     height: 300px;
-    text-indent: -9999px;
+    text-align: center;
     background:url(./images/banner.png) no-repeat center/cover;
+    padding-top: 55px; box-sizing: border-box;
+}
+
+#banner p {
+    margin: 10px;
+    font-weight: lighter;
+}
+
+#banner p:first-child { color: #bfbfbf; font-weight: bold; }
+#banner p:nth-child(2) { font-size: 70px; color: #fff; }
+#banner p:nth-child(2) span { color: #f9ffa7; }
+
+#banner a {
+    padding: 5px 45px; font-size: 14px;
+    background-color: #2f2e22;
+    color: #9b9b94;
+    border: 1px solid #9b9b94; 
+
 }
 
 /* 문화체험(content3) */
@@ -533,7 +588,7 @@ html,body {
 #cont4slideWrap {
     width: 80%; margin: 0 auto;
     padding-top: 60px;
-    overflow: scroll;
+    overflow: hidden;
 }
 #content4 ul {
     display: flex;
@@ -546,6 +601,10 @@ html,body {
     height: 150px;
     background: no-repeat center /cover;
     border: 2px solid #f0f0f0;
+}
+
+#content4 ul li a {
+    text-indent: -9999px;
 }
 
 /* li에 제이쿼리로 이미지 삽입 */
@@ -699,6 +758,11 @@ html,body {
     border-radius: 50%;
     font-family: 'Cafe24Ssurround',sans-serif;
     background-color: rgba(0,0,0,0.5); color: #fff; font-size: 20px; font-weight: bold;
+    transition: 0.5s;
+}
+
+#asideMenu li a:hover {
+    color: rgba(0,0,0,0.5); background-color: #fff;
 }
 
 /* 사이드 버튼 */
@@ -725,9 +789,18 @@ html,body {
     border-width: 2px; 
 }
 
+#asideBtn li a.top:hover {
+    color: #000;
+    background-color: #fff;
+}
+
 #asideBtn li a.sitemap {
     text-indent: -9999px;
     background-image: url(./images/menu2.png);
+}
+
+#asideBtn li a.sitemap:hover {
+    background-image: url(./images/menu1.png);
 }
 
 /* 푸터 */
