--- a/common.css
+++ b/common.css
@@ -398,7 +398,7 @@ html,body {
 }
 
 #cont2slideWrap {
-    width: 1200px; margin: 0 auto; overflow: scroll;
+    width: 1200px; margin: 0 auto; overflow: hidden;
 }
 
 #cont2ulWrap {
@@ -450,7 +450,7 @@ html,body {
     background: rgba(0,0,0,0.7);
 }
 
-#cont2ulWrap u.cont2_slide li a {
+#cont2ulWrap ul.cont2_slide li a {
     display: block;
     width: 100%; margin: 0 auto;
     height: 60vh; min-height: 400px;
@@ -1017,13 +1017,20 @@ html,body {
     #main_book { width: 350px; height: 427px; margin-left: 30px; }
     #cont1_2_slideWrap { width: 380px; bottom: 0px; right: 20px; } 
     /* 발간자료실 버튼 */
-    #cont1_2btn { top:130px; right: 170px; }
-    #cont1_2btn a { width: 70px; height: 70px;}
+    /* #cont1_2btn { top:130px; right: 170px; }
+    #cont1_2btn a { width: 70px; height: 70px;} */
 
     /* 이색전시관 */
-    #cont2slideWrap { width: 800px; }
+    #cont2slideWrap { width: 800px; height: 550px; }
+    #cont2ulWrap { width: 1600px; }
+    #cont2ulWrap ul.cont2_slide { width: 50%; height: 550px; }
     #cont2ulWrap ul.cont2_slide li {
-        width: 350px;
+        display: inline;
+        width: 350px; height: 250px;
+        margin-top: 25px;
+    }
+
+    #cont2ulWrap ul.cont2_slide li:nth-child(3) {
     }
 
     /* #cont2slideWrap ul { width: 400%; min-width: 800px; } */
@@ -1046,6 +1053,8 @@ html,body {
     /* content4 */
     #cont4slideWrap { width: 800px; }
     #cont4slideWrap ul.slide li { width: 140px; }
+    /* 내용 */
+    #cont2ulWrap ul.cont2_slide li a p { top: 65px; }
 
     /* content5 */
     #content5 { height: 35vh; }
