--- a/common.css
+++ b/common.css
@@ -306,14 +306,14 @@ html,body {
     text-indent: -9999px;
 }
 
-#bookWrap a.book1 { background-image: url(./images/e_book1.png);}
+/* #bookWrap a.book1 { background-image: url(./images/e_book1.png);}
 #bookWrap a.book2 { background-image: url(./images/e_book2.png);}
 #bookWrap a.book3 { background-image: url(./images/e_book3.png);}
 #bookWrap a.book4 { background-image: url(./images/e_book4.png);}
 #bookWrap a.book5 { background-image: url(./images/e_book5.png);}
 #bookWrap a.book6 { background-image: url(./images/e_book6.png);}
 #bookWrap a.book7 { background-image: url(./images/e_book7.png);}
-#bookWrap a.book8 { background-image: url(./images/e_book8.png);}
+#bookWrap a.book8 { background-image: url(./images/e_book8.png);} */
 
 /* 발간자료실(content1_2) 버튼 */
 /* 플러그인 */
